<resources>
  <string name="app_name">Trends</string>
  <string name="placeholder">TBD</string> <!-- if this string is shown, something needs updating -->
  <string name="please_wait">Please wait…</string> <!-- if this string is shown, something needs updating -->
  <string name="logout">Logout</string>
  <string name="desc_locked">App requires authentication before continuing</string>
  <string name="home">Home</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="preferences">Preferences</string>
  <string name="none">None</string>
  <string name="no_matches">No data, change Year or Team via Preferences.</string>
  <string name="logout_message">Are you sure you want to log out?</string>
  <string name="full_time">FT</string>
  <string name="in_progress">In Progress</string>
  <string name="goals_against">Goals Against</string>
  <string name="goals_for">Goals For</string>
  <string name="goal_differential">Goal Differential</string>
  <string name="total_points">Total Points</string>
  <string name="points_per_game">Points Per Game</string>
  <string name="desc_match_list">List of matches for selected team.</string>
  <string name="desc_data_list">List of data for review.</string>
  <string name="upcoming">Upcoming</string>
  <string name="delayed">Results Delayed</string>
  <string name="not_available">N/A</string>
  <string name="title_preferences">Preferences</string>
  <string name="title_match_summaries">Match Summaries:</string>
  <string name="no_trends">Unable to display trends for team.</string>
  <string name="total_points_by_ppg">Total Points by PPG</string>
  <string name="max_points_possible">Max Points Possible</string>
  <string name="err_no_data">Missing server-side data; try again later.</string>
  <string name="err_team_data_load_failed">Failed to load team data.</string>
  <string name="err_match_summary_data_load_failed">Failed to load match summary data.</string>
  <string name="err_match_summary_data_cleanup_failed">Clean-up of match summary data failed.</string>
  <string name="err_team_data_cleanup_failed">Clean-up of team data failed.</string>
  <string name="commissioner">Commissioner</string>
  <string name="teams">Teams</string>
  <string name="matches">Matches</string>
  <string name="local">Local</string>
  <string name="remote">Remote</string>
  <string name="synchronize">Synchronize</string>
  <string name="err_aggregate_not_created">Could not create aggregate data.</string>
  <string name="err_initialize_commissioner">Could not create commissioner object. Try again later.</string>
  <string name="overall">Overall</string>
  <string name="conference">Conference</string>
  <string name="data_synchronized">Data between local and remote already synchronized.</string>
  <string name="err_trend_data_load_failed">Unable to create data charts. Try again later.</string>
  <string name="tab_data_refresh">Data Refresh</string>
  <string name="err_commissioner_activity">Commissioner activity failed.</string>
  <string name="menu_back">Back</string>
  <string name="team_data_status">Team Data Status:</string>
  <string name="reload_team_data_from_server">Reload Team Data from Server</string>
  <string name="match_summary_data_status">Match Summary Data Status:</string>
  <string name="reload_match_data_from_server">Reload Match Data from Server</string>
  <string name="generate_trends">Generate Trends</string>
  <string name="trends">Trends:</string>
  <string name="matches_played">Matches Played</string>
  <string name="complete">Complete</string>
  <string name="title_trend_chart">Trend Chart</string>
  <string name="title_summary">Summary</string>
  <string name="pending">Pending</string>

  <string name="pref_category_season">Season</string>
  <string name="pref_key_season" translatable="false">selected_season</string>
  <string name="pref_summary_season_missing">No season selected!</string>
  <string name="pref_title_season">Selected Season</string>
  <string name="pref_category_team">Team</string>
  <string name="pref_key_team" translatable="false">selected_team</string>
  <string name="pref_summary_team_missing">No team selected!</string>
  <string name="pref_title_team">Selected Team</string>
  <string name="pref_category_about">About</string>
  <string name="pref_key_app_version" translatable="false">app_version</string>
  <string name="pref_title_app_version">Application Version</string>
  <string name="dismiss">Dismiss</string>
  <string name="save">Save</string>
  <string name="title_conferences">Conferences:</string>
  <string name="title_teams">Teams:</string>
  <string name="title_trends">Trends:</string>

  <string-array name="seasons">
    <item>2017</item>
    <item>2018</item>
    <item>2019</item>
  </string-array>
</resources>
