<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark">

    <TextView
        android:id="@+id/data_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/placeholder"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/data_text_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data_text_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/placeholder"
        android:textColor="@color/primaryAccentText"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/data_image_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_text_title" />

    <TextView
        android:id="@+id/data_text_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:layout_marginTop="8dp"
        android:text="@string/local"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintEnd_toStartOf="@id/data_text_remote"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/data_image_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/local"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/data_text_local"
        app:layout_constraintStart_toStartOf="@id/data_text_local"
        app:layout_constraintTop_toBottomOf="@+id/data_text_local"
        app:srcCompat="@drawable/ic_success_dark" />

    <TextView
        android:id="@+id/data_text_remote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/remote"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/data_image_remote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/remote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/data_text_remote"
        app:layout_constraintStart_toStartOf="@id/data_text_remote"
        app:layout_constraintTop_toBottomOf="@+id/data_text_remote"
        app:srcCompat="@drawable/ic_success_dark" />

</android.support.constraint.ConstraintLayout>