<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:card_view="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primaryDark">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/summary_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintGuide_percent=".5"
    android:orientation="vertical"/>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_matches"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_matches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/matches_played"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
      <TextView
        android:id="@+id/summary_text_matches_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary_text_matches"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_total_points"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toStartOf="@id/summary_guideline"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/summary_card_matches"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_total_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/total_points"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_total_points_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_total_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_points_per_game"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/summary_guideline"
    app:layout_constraintTop_toBottomOf="@id/summary_card_matches"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_points_per_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/points_per_game"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_points_per_game_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_points_per_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_max_points"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toStartOf="@+id/summary_guideline"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/summary_card_total_points"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_max_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/max_points_possible"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_max_points_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_max_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_points_by_average"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/summary_guideline"
    app:layout_constraintTop_toBottomOf="@id/summary_card_points_per_game"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_points_by_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/total_points_by_ppg"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_points_by_average_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_points_by_average"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_goals_for"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:layout_marginEnd="8dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="@id/summary_card_goals_against"
    app:layout_constraintEnd_toStartOf="@+id/summary_guideline"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/summary_card_max_points"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_goals_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/goals_for"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_goals_for_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_goals_for"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_goals_against"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/summary_guideline"
    app:layout_constraintTop_toBottomOf="@id/summary_card_points_by_average"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_goals_against"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/goals_against"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_goals_against_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_goals_against"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/summary_card_goal_differential"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/summary_card_goals_for"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/summary_text_goals_differential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/goal_differential"
        android:gravity="center"
        android:textColor="@color/primaryAccentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
      <TextView
        android:id="@+id/summary_text_goals_differential_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/summary_text_goals_differential"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
